# goblint

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  .typos.toml  CONFIG.md  Cargo.toml  Dockerfile  README.md  RULES.md  gobject-lint.toml  goblin.toml  goblint.toml  typos.toml
.github/workflows/: ci.yml  container.yml
examples/: ast_lint_example.rs
gobject-ast/: Cargo.toml
gobject-ast/examples/: dump_ast.rs
gobject-ast/src/: lib.rs  main.rs  model.rs  parser.rs
gobject-ast/src/model/: mod.rs  operators.rs  project.rs  source_location.rs  top_level.rs  type_info.rs
gobject-ast/src/model/expression/: assignment.rs  binary.rs  call.rs  cast.rs  conditional.rs  field_access.rs  identifier.rs  initializer_list.rs  literal.rs  mod.rs  sizeof.rs  subscript.rs  unary.rs  update.rs
gobject-ast/src/model/statement/: break_stmt.rs  compound_stmt.rs  continue_stmt.rs  expression_stmt.rs  for_stmt.rs  goto_stmt.rs  if_stmt.rs  labeled_stmt.rs  mod.rs  return_stmt.rs  switch_stmt.rs  variable_decl.rs  while_stmt.rs
gobject-ast/src/model/types/: enum_info.rs  function.rs  gobject_type.rs  include.rs  mod.rs  property.rs  struct_info.rs  typedef.rs
gobject-ast/src/parser/: gobject.rs  mod.rs  top_level.rs
gobject-ast/src/parser/expression/: assignment.rs  binary.rs  call.rs  cast.rs  conditional.rs  mod.rs  sizeof.rs  subscript.rs  unary.rs  update.rs
gobject-ast/src/parser/statement/: break_stmt.rs  compound_stmt.rs  continue_stmt.rs  expression_stmt.rs  goto_stmt.rs  if_stmt.rs  labeled_stmt.rs  mod.rs  return_stmt.rs  switch_stmt.rs  variable_decl.rs
gobject-ast/tests/: gobject_parsing_tests.rs  statement_parsing.rs
gobject-ast/tests/fixtures/: includes_simple.c  includes_with_conditionals.c
gobject-ast/tests/fixtures/gobject/: annotations.h  boxed_types.c  class_with_vfuncs.h  custom_param_spec.c  declare_derivable.h  declare_final.h  declare_interface.h  define_type.c  define_type_with_private.c  interface_impl.c  multiple_types.h  properties.c  signals.c
src/: ast_context.rs  config.rs  fixer.rs  lib.rs  main.rs  meson.rs  reporter.rs  scanner.rs
src/lsp/: backend.rs
src/output/: gcc.rs  gitlab_codequality.rs  mod.rs  sarif.rs
src/rules/: chainup.rs  dead_code.rs  deprecated_add_private.rs  g_declare_semicolon.rs  g_error_init.rs  g_error_leak.rs  g_object_virtual_methods_chain_up.rs  g_param_spec.rs  g_param_spec_null_nick_blurb.rs  g_param_spec_static_name_canonical.rs  g_param_spec_static_strings.rs  g_task_source_tag.rs  gdeclare_semicolon.rs  gerror_init.rs  gobject_virtual_methods_chain_up.rs  gtask_source_tag.rs  include_order.rs  matching_declare_define.rs  missing_autoptr_cleanup.rs  missing_export_macro.rs  missing_implementation.rs  mod.rs  prefer_g_new.rs  prefer_g_object_class_install_properties.rs  prefer_g_settings_typed.rs  prefer_g_value_set_static_string.rs  prefer_g_variant_new_typed.rs  property_canonical_name.rs  (+47 more)
tests/: inline_ignore_test.rs  rule_tests.rs  test_rule_consistency.py
tree-sitter-c-gobject/: Cargo.toml  grammar.js
tree-sitter-c-gobject/bindings/rust/: build.rs  lib.rs
tree-sitter-c-gobject/src/: grammar.json  node-types.json  scanner.c
website/: index.html  script.js  style.css
(+165 files in other folders)
