[package]
name = "gobject-lint"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.26"
tree-sitter-c = "0.24"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
walkdir = "2.5"
anyhow = "1.0"
colored = "3.1"
globset = "0.4"
indicatif = "0.18"
