[package]
name = "goblin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "goblin"
path = "src/main.rs"

[[bin]]
name = "goblin-lsp"
path = "src/lsp/main.rs"

[dependencies]
gobject-ast = { path = "gobject-ast" }
tree-sitter = "0.26"
tree-sitter-c = "0.24"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
walkdir = "2.5"
anyhow = "1.0"
colored = "3.1"
globset = "0.4"
indicatif = "0.18"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }
serde_json = "1.0"
