[package]
name = "gobject-ast"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "gobject-ast"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-c = "0.24"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.0"
