[package]
name = "tree-sitter-c-gobject"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GObject-aware C grammar for tree-sitter"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"
